  * Remove trailing blank line from debian/changelog.
  * Update lintian overrides due to a lot of renamed or updated tags.
  * Drop enforcement of gzip compression: Was last needed for Wheezy.
  * Bump debhelper compatibility level to 13.
    + Build-depend on "debhelper-compat (= 13)" to replace debian/compat.
  * Declare compliance with Debian Policy 4.5.0.

 -- Axel Beckert <abe@deuxchevaux.org>  Sat, 03 Nov 2018 03:18:46 +0100

abe-desktop (13.1.1) unstable; urgency=medium

  * Enforce usage of gz instead of xz for .deb archive members as long as
    Wheezy is supported.

 -- Axel Beckert <abe@deuxchevaux.org>  Wed, 22 Nov 2017 04:41:44 +0100

abe-desktop (13.1) unstable; urgency=medium

  * Suggests arandr on all desktops to be able to generate xrandr
    configurations for this setup.
  * Update screen saver list, demote xscreensaver to least favourite
    screen saver as its upstream developer must be considered hostile.
  * Add support for USBGuard.
  * Promote xfce4-power-manager from alternative to fdpowermon to
    recommended and by default started tool. Use mate-power-manager as
    alternative. Needed to make function keys on modern Thinkpads work.
  * Only disallow awesome ≥ 3.5 if we don't have an according
    awesome-extra version available.
  * Prefer fonts-atarismall over ttf-atarismall.
  * Declare compliance with Debian Policy 4.1.1.
    + Change Priority to optional.
  * Ignore some more recent debhelper build artefacts.
  * Set "Rules-Requires-Root: no".
  * Add qutebrowser as alternative to conkeror.
  * abe-desktop-with-systemtray:
    + Suggest systray-mdstat
    + Suggest solaar.

 -- Axel Beckert <abe@deuxchevaux.org>  Tue, 21 Nov 2017 08:37:45 +0100

abe-desktop (13) unstable; urgency=medium

  * Split up abe-desktop-awesome into abe-desktop-awesome, abe-desktop-i3
    and abe-desktop-with-systemtray.
  * Use xsettingsd where available; fallback to gnome-, mate-, or