@@ -12,6 +12,7 @@ abe-desktop (13.2) UNRELEASED; urgency=medium
   * Bump debhelper compatibility level to 13.
     + Build-depend on "debhelper-compat (= 13)" to replace debian/compat.
   * Declare compliance with Debian Policy 4.5.0.
+  * Switch to a minimal dh-based debian/rules file.
 
  -- Axel Beckert <abe@deuxchevaux.org>  Sat, 03 Nov 2018 03:18:46 +0100
 
